--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="heading">
             <h1 class="tittle"><b>RUU TNI Disahkan: Demokrasi Indonesia Di Ambang Kehancuran!</b></h1>
             <div class="me">
-                <p class="me1"><b>Erich Valentino</b></p>
+                <p class="me1"><b>Hubert</b></p>
                 <p class="me2"><b>Daily News Web</b></p>
             </div>
             <div class="tanggal">
