--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="me2"><b>Daily News Web</b></p>
             </div>
             <div class="tanggal">
-                <p><b>Senin, 24 Maret 2025</b></p>
+                <p><b>Kamis, 11 April 2025</b></p>
             </div>
             <figure>
                 <img src="pictures/Riot.jpg" class="RIOT" alt="Gambar protes besar-besarran">
