--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RUU TNI Disahkan: Demokrasi Indonesia Di Ambang Kehancuran!</title>
     <link rel="stylesheet" href="style.css">
-    <link href="fontawesome5/css/all.css" rel="stylesheet" type="text/css"></link>
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9de11877a1.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
@@ -17,6 +16,7 @@
             <a href="">Library</a>
             <a href="">About Us</a>
         </nav>
+        <!-- <i class="fa-solid fa-circle-user" style="color: white"></i> test fontawsome-->
     </header>
     <main>
     <hr class="hr1"> <!------------------------------------------------------------------>
@@ -31,7 +31,7 @@
             </div>
             <figure>
                 <img src="pictures/Riot.jpg" class="RIOT" alt="Gambar protes besar-besarran">
-                <p><i>Gambar dari ratusan mahasiswa yang tergabung dalam Cipayung Kediri, menggelar unjuk rasa di depan gedung DPRD Kabupaten Kediri, Rabu (19/6/2024) siang. Diambil dari Suaraindonesia.co.id.</i></p>
+                <p class="img-text"><i>Gambar dari ratusan mahasiswa yang tergabung dalam Cipayung Kediri, menggelar unjuk rasa di depan gedung DPRD Kabupaten Kediri, Rabu (19/6/2024) siang. Diambil dari Suaraindonesia.co.id.</i></p>
             </figure>
             <br>
         </section>
@@ -172,3 +172,4 @@
     </footer>
 </body>
 </html>
+
